# toddofcode2024

./: README.md
day_1/input/: massaged_input.txt  small_massaged_input.txt
day_1/src/: main.cpp
day_2/input/: massaged_input.txt  small_massaged_input.txt
day_2/src/: main.cpp
day_3/src/: main.cpp
day_4/src/: main.cpp
day_5/: CMakeLists.txt
day_5/input/: massaged_input.txt  small_massaged_input.txt
day_5/src/: main.cpp
template/src/: main.cpp
